--- a/CODEx/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CODEx/Areas/Admin/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row text-center">
-            <h2 class="text-primary py-2">Category List</h2>
+            <h2 class="text-primary py-2">Event List</h2>
         </div>
     </div>
     <div class="card-body p-4">
