--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -37,7 +37,9 @@
                                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="Coordinator" asp-action="Index">Add Coordinator</a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Coordinator" asp-action="UpsertGlimpse">Add Glimpse</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
