some mirror chanages

--- a/CODEx/Areas/User/Views/Home/Details.cshtml
+++ b/CODEx/Areas/User/Views/Home/Details.cshtml
@@ -14,8 +14,8 @@
             <div class="py-3">
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
-                        <a asp-action="Index" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
-                            <small>Back to home</small>
+                        <a asp-action="ListEvents" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                            <small>Back</small>
                         </a>
                     </div>
                 </div>
