--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Coordinator" asp-action="UpsertGlimpse">Add Glimpse</a>
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="InsertGlimpse">Add Glimpse</a>
                                 </li>
                             </ul>
                         </li>
