adding vide url

--- a/CODEx/Areas/User/Views/Home/Details.cshtml
+++ b/CODEx/Areas/User/Views/Home/Details.cshtml
@@ -36,3 +36,7 @@
         </div>
     </div>
 </form>
+
+<div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="@Model.VideoUrl" allowfullscreen></iframe>
+</div>
