Added Registration Form

--- a/CODEx/Areas/User/Views/Home/Details.cshtml
+++ b/CODEx/Areas/User/Views/Home/Details.cshtml
@@ -26,6 +26,7 @@
                     <div class="col-12 col-lg-6 offset-lg-1">
                         <div class="row pl-2 my-3">
                             <p class="text-secondary lh-sm">@Html.Raw(Model.Description)</p>
+                            <a><i class="bi bi-facebook"></i></a>
                         </div>
                         <div class="row ps-2">
                             <h6 class="text-dark text-opacity-50 ">Total Participant : @Model.TotalParticipant</h6>
