Adding import function

--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="InsertGlimpse">Add Glimpse</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="User" asp-controller="RegistrationForm" asp-action="Index">View Registration</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
