--- a/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Category>
+﻿@model List<RegistrationForm>
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
@@ -11,8 +11,8 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                    <i class="bi bi-plus-circle"></i> Create New Category
+                <a asp-controller="Registration" asp-action="Import" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Import To Excel Sheet
                 </a>
             </div>
         </div>
@@ -20,25 +20,29 @@
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                    <th>
-                        Category Name
-                    </th>
-                    <th>
-                        Display Order
-                    </th>
+                    <th>Team Name</th>
+                    <th>Leader Name</th>
+                    <th>College</th>
+                    <th>Department</th>
+                    <th>Theme</th>
+                    <th>Category</th>
                     <th></th>
                 </tr>
             </thead>
 
             <tbody>
-                @foreach (var obj in Model.OrderBy(u => u.DisplayOrder))
+                @foreach (var obj in Model.OrderBy(u => u.Id))
                 {
                     <tr>
-                        <td>@obj.Name</td>
-                        <td>@obj.DisplayOrder</td>
+                        <td>@obj.TeamName</td>
+                        <td>@obj.TeamLeaderNanme</td>
+                        <td>@obj.College</td>
+                        <td>@obj.Department</td>
+                        <td>@obj.Theme</td>
+                        <td>@obj.Category</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="Re" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
                                 <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
