--- a/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Registration" asp-action="Import" class="btn btn-primary">
+                <a asp-controller="RegistrationForm" asp-action="ExportToExcel" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i> Import To Excel Sheet
                 </a>
             </div>
