--- a/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row text-center">
-            <h2 class="text-primary py-2">Category List</h2>
+            <h2 class="text-primary py-2">Minithon 2.0</h2>
         </div>
     </div>
     <div class="card-body p-4">
