--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
         </div>
     }
     <a asp-area="User" asp-action="ListEvents" asp-controller="Home" asp class="btn btn-primary bg-gradient border-0 form-control">
-        View All The Members
+        View All The Event
     </a>
     <!-- Add more services as needed -->
 </section>
