--- a/CODEx/Areas/User/Views/RegistrationForm/Create.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Create.cshtml
@@ -86,7 +86,7 @@
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        <button type="submit" class="btn btn-primary form-control">Submit</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Home" asp-action="Minithon" class="btn btn-outline-secondary border form-control">
