--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CODEx</title>
+    <title>CODEx</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CODEx.styles.css" asp-append-version="true" />
@@ -63,13 +63,13 @@
             </div>
             <div class="footer-info">
                 <h4>Contact Us</h4>
-                <p>Email: contact@designer.com</p>
-                <p>Phone: (123) 456-7890</p>
+                <p>Email: supshiv7250@gmail.com</p>
+                <p>Phone: +91-9304961453</p>
             </div>
             <div class="footer-social">
                 <h4>Follow Us</h4>
                 <ul>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 </ul>
