--- a/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
@@ -22,11 +22,11 @@
                 <tr>
                     <th>Team Name</th>
                     <th>Leader Name</th>
+                    <th>Leader Email</th>
                     <th>College</th>
                     <th>Department</th>
                     <th>Theme</th>
                     <th>Category</th>
-                    <th></th>
                 </tr>
             </thead>
 
@@ -36,20 +36,11 @@
                     <tr>
                         <td>@obj.TeamName</td>
                         <td>@obj.TeamLeaderNanme</td>
+                        <td>@obj.LeaderEmail</td>
                         <td>@obj.College</td>
                         <td>@obj.Department</td>
                         <td>@obj.Theme</td>
                         <td>@obj.Category</td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Re" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash-fill"></i> Delete
-                                </a>
-                            </div>
-                        </td>
                     </tr>
                 }
 
