--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <header class="banner">
     <h1>Welcome to CODEx Club MMDU</h1>
     <p>Community of Developers</p>
-    <a asp-controller="Home" asp-action="About" class="btn">Learn More</a>
+    <a asp-controller="Home" asp-action="About" class="btnb">Learn More</a>
 </header>
 <br />
 <hr />
