--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                                 <p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@eventlist.Name</p>
                                 <p class="card-title text-warning text-center"> <b>@eventlist.Description</b></p>
                                 <a><i class="bi bi-facebook"></i></a>
-                                <i class="fab fa-instagram"></i>
+                                <i class="bi bi-instagram"></i>
                                 <i class="fab fa-linkedin-in"></i>
                                 <i class="fab fa-youtube"></i>
                             </div>
