added linkdin icon

--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                                 <p class="card-title text-warning text-center"> <b>@eventlist.Description</b></p>
                                 <a><i class="bi bi-facebook"></i></a>
                                 <i class="bi bi-instagram"></i>
-                                <i class="fab fa-linkedin-in"></i>
+                                <i class="bi bi-linkedin"></i>
                                 <i class="fab fa-youtube"></i>
                             </div>
                         </div>
