added youtube icon

--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                                 <a><i class="bi bi-facebook"></i></a>
                                 <i class="bi bi-instagram"></i>
                                 <i class="bi bi-linkedin"></i>
-                                <i class="fab fa-youtube"></i>
+                                <i class="bi bi-youtube"></i>
                             </div>
                         </div>
                         <div>
