removed Chat controller

--- a/CODEx/wwwroot/css/site.css
+++ b/CODEx/wwwroot/css/site.css
@@ -7,7 +7,7 @@
     background-position: center;
     color: #fff;
     text-align: center;
-    padding: 100px 0;
+    padding: 100px 100px;
 }
 
     .banner h1 {
